--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mr-Carteret-and-Others_68051
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68051-h/images/cover.jpg
 creator:
   author:
     agent_name: Gray, David
@@ -9,6 +12,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/31601
     wikipedia: https://en.wikipedia.org/wiki/David_Gray_(diplomat)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68051#Mr-Carteret-and-Others
 gutenberg_issued: '2022-05-11'
 identifiers:
   gutenberg: '68051'
